# ddns-updater

./: Cargo.toml  Makefile  README.md  ddnsd.service
src/: duckdns.rs  main.rs  network.rs
