[package]
name = "dyndns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
reqwest = { version = "0.11.23" }
network-interface = "1.1.1"
net-route = { git = "https://github.com/harryjph/net-route" }
anyhow = "1.0.79"
itertools = "0.12.1"
clap = { version = "4.4.18", features = ["derive"] }
log = "0.4.20"
simplelog = "0.12.1"
